--- a/pure-HTML/src/main/webapp/WEB-INF/web.xml
+++ b/pure-HTML/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
   </context-param>
   
   <welcome-file-list>
-    <welcome-file>App</welcome-file>
+    <welcome-file>index.html</welcome-file>
   </welcome-file-list>
   
 </web-app>
