--- a/pure-HTML/.project
+++ b/pure-HTML/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>gruppi-di-lavoro</name>
+	<name>gruppi-di-lavoro-pureHTML</name>
 	<comment></comment>
 	<projects>
 	</projects>
