--- a/pure-HTML/src/main/webapp/WEB-INF/web.xml
+++ b/pure-HTML/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
 
   <context-param>
     <param-name>dbUrl</param-name>
-    <param-value>jdbc:mysql://mysql:3306/gruppidilavoro?serverTimezone=UTC</param-value>
+    <param-value>jdbc:mysql://tiw-mysql:3306/gruppidilavoro?serverTimezone=UTC</param-value>
   </context-param>
   <context-param>
     <param-name>dbUser</param-name>
